# 202602-inbox_and_im

./: .env.example  .gitignore  NOTE.md  QUICKSTART.md  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: __init__.py  env.py
alembic/versions/: 20250207_2200_init_db.py  __init__.py
app/: __init__.py  config.py  dependencies.py  main.py
app/api/v1/: auth.py  notifications.py
app/core/: database.py  security.py
app/middleware/: cors.py
app/models/: __init__.py  notification.py  user.py
app/schemas/: __init__.py  notification.py  user.py
app/services/: auth_service.py  notification_service.py
brunos/: bruno-format-deep-dive.md
brunos/inbox_and_im/: README.md  bruno.json  collection.bru
brunos/inbox_and_im/01-站内信完整流程/: 01-管理员创建站内信.bru  02-管理员发送站内信给用户.bru  03-用户获取站内信列表.bru  04-用户获取站内信详情.bru  05-管理员获取站内信列表.bru  06-管理员获取站内信详情.bru  folder.bru
brunos/inbox_and_im/02-站内信已读未读功能/: 01-获取站内信ID.bru  02-标记单条站内信为已读.bru  02-获取未读站内信数量.bru  03-全部标记已读.bru  (+12 more)
docs/: api-documentation.md  bruno-api-client-research.md  database-schema.md  im-design.md  notification-types.md
docs/core/: README.md  notification-implementation.md  web-backend-development-guide.md
scripts/: generate_secret_key.py
tests/: conftest.py  test_auth.py  test_notifications.py
tests/scenarios/: README.md  test_admin_create_and_send_notification.py  test_admin_edit_notifications.py  test_notification_filtering.py  test_user_batch_manage_notifications.py  test_user_delete_notifications.py  test_user_receive_and_read_notifications.py  test_user_registration_and_login.py
(+45 files in other folders)
